public/content/@ks-qkcp/v3.5/03-installation-and-upgrade/05-add-and-delete-cluster-nodes/01-add-cluster-nodes.adoc
---
title: "添加集群节点"
keywords: "Kubernetes, {ks_product}, 添加集群节点"
description: "介绍如何添加{ks_product_both}集群节点。"
weight: 01
---

// :ks_include_id: 324d602d824d4c449259417133f999fc
:ks_xref_id: 6a1616a62d854ce085dc51fd91d3cada
:ks_comp: ../../../components/
:ks_title: 添加集群节点
:ks_keywords: Kubernetes, {ks_product}, 添加集群节点
:ks_description: 介绍如何添加{ks_product_both}集群节点。
:ks_weight: 01
:ks_icon:


本节介绍如何添加{ks_product_both}集群节点。

节点添加过程中将用到开源工具 KubeKey。有关 KubeKey 的更多信息，请访问 link:https://github.com/kubesphere/kubekey[GitHub KubeKey 仓库]。

// Note
include::../../../../_ks_components/admonitions/note.adoc[]

本节介绍的节点添加方式仅适用于 Kubernetes 通过 KubeKey 安装的场景。如果您的 Kubernetes 不是通过 KubeKey 安装，请参阅 link:https://kubernetes.io/zh/docs/concepts/architecture/nodes/[Kubernetes 官方文档]添加节点。

include::../../../../_ks_components/admonitions/admonEnd.adoc[]


== 前提条件link:[id=edf4fc7ff15e4963adca3df9339d70ae]

* 您需要联系{ks_product_both}的交付服务专家获取{ks_product_left} v3.5.0 安装包。如实施现场条件允许在线拉取公开仓库，具备在线安装条件，可联系 KubeSphere 产品团队获取在线安装文件及相关信息。

* 新增节点的操作系统和版本须为 Ubuntu 16.04、Ubuntu 18.04、Debian 9、Debian 10、CentOS 7、CentOS Stream、RHEL 7、RHEL 8、SLES 15 或 openSUSE Leap 15。多个集群节点的操作系统可以不同。关于其它操作系统和版本支持，请联系{ks_product_both}技术支持。

* 为确保集群具有足够的计算和存储资源，建议新增节点配置至少 8 个 CPU 核心，16 GB 内存和 200 GB 磁盘空间。除此之外，建议在每台集群节点的 **/var/lib/docker**（对于 Docker）或 **/var/lib/containerd**（对于 containerd） 目录额外挂载至少 200 GB 磁盘空间用于存储容器运行时数据。

* 如果添加控制平面节点，您需要提前为集群配置高可用性。如果您使用负载均衡器，请确保负载均衡器监听所有控制平面节点的 6443 端口。有关更多信息，请参阅link:../../01-preparations/03-configure-high-availability/[配置高可用性]。

ifeval::["{file_output_type}" == "html"]
* 如果您的集群节点无法连接互联网，您还需要准备一台 Linux 服务器用于创建私有镜像服务，该服务器必须与{ks_product_both}集群节点网络连通并且在 **/mnt/registry** 目录挂载至少 100 GB 磁盘空间。

// 除此之外，您需要提前创建离线安装包 **kubekey-artifact.tar.gz** 并将其传输到用于执行本节操作的集群节点。有关更多信息，请参阅link:../../01-preparations/02-create-an-offline-installation-package/[创建离线安装包]。

endif::[]

ifeval::["{file_output_type}" == "pdf"]
* 除集群节点外，您还需要准备一台 Linux 服务器用于创建私有镜像服务，该服务器必须与{ks_product_both}集群节点网络连通，并且在 **/mnt/registry** 目录挂载至少 100 GB 磁盘空间。
endif::[]


:relfileprefix: ../../../

include::../../../_custom/installationAndUpgrade/installationAndUpgrade-prer-obtainConfigSample.adoc[]

:relfileprefix: ./


--
// Warning
include::../../../../_ks_components/admonitions/warning.adoc[]

* 添加节点过程中不支持在 **config-sample.yaml** 配置文件中修改原有的集群配置。

* 如果您无法获取安装配置文件 **config-sample.yaml**，您需要参阅link:../../02-install-kubesphere/02-install-kubernetes-and-kubesphere/[安装 Kubernetes 和{ks_product_both}]重新创建 **config-sample.yaml** 文件。重新创建该文件时，请务必确保文件中的集群信息与集群的当前实际情况一致。否则，添加节点后集群可能会出现错误。

include::../../../../_ks_components/admonitions/admonEnd.adoc[]
--


== 操作步骤link:[id=3090f51dda84406eb51df5a6c83d0e46]

ifeval::["{file_output_type}" == "html"]
include::../../../_custom/installationAndUpgrade/installationAndUpgrade-oper-downloadKubekey.adoc[]
endif::[]

ifeval::["{file_output_type}" == "pdf"]
include::../../../_custom/installationAndUpgrade/installationAndUpgrade-oper-decompressInstallationPackage_new.adoc[]
endif::[]


include::../../../_custom/installationAndUpgrade/installationAndUpgrade-oper-transferConfig.adoc[]

+

. 执行以下命令编辑安装配置文件 **config-sample.yaml**：
+
--
// Bash
include::../../../../_ks_components/code/bash.adoc[]

vi config-sample.yaml

include::../../../../_ks_components/code/codeEnd.adoc[]
--

. 在 **config-sample.yaml** 文件的 **hosts** 参数下设置新增节点的信息。
+
--

include::../../../_custom/installationAndUpgrade/installationAndUpgrade-para-hosts.adoc[]

// Warning
include::../../../../_ks_components/admonitions/warning.adoc[]

请勿修改原有节点的信息。否则，添加节点后集群可能会出现错误。

include::../../../../_ks_components/admonitions/admonEnd.adoc[]
--

. 在 **config-sample.yaml** 文件的 **roleGroups** 参数下设置新增节点在集群中的角色。
+
--

include::../../../_custom/installationAndUpgrade/installationAndUpgrade-para-roleGroups.adoc[]

// Warning
include::../../../../_ks_components/admonitions/warning.adoc[]

请勿修改原有节点的角色。否则，添加节点后集群可能会出现错误。

include::../../../../_ks_components/admonitions/admonEnd.adoc[]
--

. 如果新增控制平面节点并且当前集群未配置高可用性，在 **config-sample.yaml** 文件的 **controlPlaneEndpoint** 参数下设置高可用性信息。
+
--

include::../../../_custom/installationAndUpgrade/installationAndUpgrade-para-controlPlaneEndpoint.adoc[]

// Warning
include::../../../../_ks_components/admonitions/warning.adoc[]

* 如果当前集群已配置高可用性，请勿修改 **config-sample.yaml** 文件中的高可用性信息。否则，添加节点后集群可能会出现错误。

* 如果当前集群使用本地负载均衡实现高可用性，您不需要对集群高可用性进行任何操作；如果当前集群使用负载均衡器实现高可用性，您只需要设置负载均衡器监听所有控制平面节点的 6443 端口。有关更多信息，请参阅link:../../01-preparations/03-configure-high-availability/[配置高可用性]。

include::../../../../_ks_components/admonitions/admonEnd.adoc[]
--

ifeval::["{file_output_type}" == "html"]
. 保存配置文件，执行以下命令开始添加节点：

* 对于互联网连接正常的环境：
+
--
// Bash
include::../../../../_ks_components/code/bash.adoc[]

 ./kk add nodes -f config-sample.yaml

include::../../../../_ks_components/code/codeEnd.adoc[]
--

* 对于无法连接互联网的环境：
+
--
include::../../../_custom/installationAndUpgrade/installationAndUpgrade-code-addNodes.adoc[]
--
endif::[]

ifeval::["{file_output_type}" == "pdf"]
. 保存配置文件，执行以下命令开始添加节点：
+
--
include::../../../_custom/installationAndUpgrade/installationAndUpgrade-code-addNodes.adoc[]
--
endif::[]

. 执行以下命令查看当前集群的节点：
+
--
// Bash
include::../../../../_ks_components/code/bash.adoc[]

kubectl get node

include::../../../../_ks_components/code/codeEnd.adoc[]

如果显示新增节点的信息，则表明节点添加成功。
--
